--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-bootstrap": "^2.2.2",
+    "react-dom": "18.0.0",
+    "recharts": "^2.1.9",
+    "sass": "^1.49.11"
   },
   "devDependencies": {
     "eslint": "8.12.0",
